# LLM-API-Key-Proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUG.md  CONTRIBUTING.md  DOCUMENTATION.md  Deployment guide.md  Dockerfile  LICENSE.MD  PR4_CODE_REVIEW.md  PROJECT_OVERVIEW.md  README.md  STATS-MODEL-ISSUE.md  STRUCTURE.md  antigravity_refactoring_implementation_plan.md  docker-compose.dev.yml  docker-compose.tls.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start_proxy.bat
src/rotator_library/: README.md  __init__.py  background_refresher.py  client.py  cooldown_manager.py  credential_manager.py  credential_tool.py  error_handler.py  error_tracker.py  failure_logger.py  fallback_groups.py  litellm_providers.py  model_alias_registry.py  model_definitions.py  model_fallback_registry.py  model_info_service.py  model_latest_registry.py  provider_config.py  provider_factory.py  proxy_config.py  pyproject.toml  request_sanitizer.py  retry_policy.py  routing_policy.py  session_tracking.py  stream_utils.py  token_calculator.py  transaction_logger.py  transform_trace.py  usage_manager.py
src/rotator_library/adapters/: __init__.py  base.py  builtin.py  registry.py
src/rotator_library/anthropic_compat/: models.py  streaming.py  translator.py
src/rotator_library/client/: __init__.py  anthropic.py  cross_provider_executor.py  executor.py  filters.py  model_discovery.py  models.py  quota.py  request_builder.py  rotating_client.py  scopes.py  stream_retry_policy.py  streaming.py  transforms.py  types.py  usage_managers.py
src/rotator_library/config/: __init__.py  defaults.py  experimental.py
src/rotator_library/core/: __init__.py  config.py  constants.py  errors.py  types.py  utils.py
src/rotator_library/ensemble/: __init__.py  config_loader.py  manager.py
src/rotator_library/ensemble_configs/: README.md
src/rotator_library/field_cache/: __init__.py  engine.py  paths.py  store.py  types.py
src/rotator_library/native_provider/: __init__.py  context.py  executor.py  http.py  streaming.py
src/rotator_library/protocols/: __init__.py  anthropic_messages.py  base.py  gemini.py  litellm_fallback.py  mcp.py  ollama.py  openai_audio.py  openai_chat.py  openai_embeddings.py  (+5 more)
(+423 files in other folders)
