[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotating-api-key-client"
version = "0.1.0"
authors = [
    { name="Mirrowel", email="you@example.com" },
]
description = "A client that intelligently rotates and retries API keys using LiteLLM."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm",
    "filelock",
]

[project.urls]
"Homepage" = "https://github.com/Mirrowel/LLM-API-Key-Proxy"
"Bug Tracker" = "https://github.com/Mirrowel/LLM-API-Key-Proxy/issues"

[tool.setuptools.packages]
find = { where = ["."], include = ["rotator_library*"] }
